fix(UnsafeWrapper.java) delete unused private field